fix anchor spacing with fixed header

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -44,15 +44,14 @@ footer {
     .td-offset-anchor:target {
         display: block;
         position: relative;
-        top: -4rem;
         visibility: hidden;
     }
 
     h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before {
         display: block;
         content: " ";
-        margin-top: -5rem;
-        height: 5rem;
+        margin-top: -120px;
+        height: 120px;
         visibility: hidden;
     }
 }
